feat: auth openapi snapshot
